Update packaging docs
Several bits of cleanup: markup, make the package types look
like a list, duplicate entries which made the manpage look
odd dropped from Tool/packaging.xml (which is apparently
obsolete now), added a note about needing to "activate"
the Package builder by calling the packaging tool.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -11,6 +11,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - scons-time takes more care closing files and uses safer mkdtemp to avoid
       possible races on multi-job runs.
     - Use importlib to dynamically load tool and platform modules instead of imp module
+    - update packaging docs
 
   From John Doe:
 
