--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -24,6 +24,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Quiet open file ResourceWarnings on Python >= 3.6 caused by
       not using a context manager around Popen.stdout
     - Add the textfile tool to the default tool list
+    - Fix syntax on is/is not cluases: should not use with a literal
 
 
 RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000
