--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -26,6 +26,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Add the textfile tool to the default tool list
     - Fix syntax on is/is not cluases: should not use with a literal
 
+  From Bernhard M. Wiedemann:
+    - Do not store build host name if reproducible builds are wanted
+
 
 RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000
 
