Add bugfix info to CHANGES.txt

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -18,6 +18,7 @@ RELEASE 3.0.5.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
       Decider and not clearing it when the configure context is completed.
     - Add default paths for yacc tool on windows to include cygwin, mingw, and chocolatey
     - Fix issue #2799 - Fix mingw tool to respect SHCCCOMSTR, SHLINKCOMSTR and LDMODULECOMSTR
+    - Fix Issue #3329 - Add support for MS SDK V10.0A (which is commonly installed with VS2017)
 
   From Daniel Moody:
     - Change the default for AppendENVPath to delete_existing=0, so path
