[PR #3331] resync with PR #3330
Manually make scons-time.py match master after it evolved independently
in a different PR.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -10,6 +10,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mats Wichmann:
     - scons-time takes more care closing files and uses safer mkdtemp to avoid
       possible races on multi-job runs.
+    - Use importlib to dynamically load tool and platform modules instead of imp module
 
   From John Doe:
 
@@ -53,8 +54,6 @@ RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
     - Properly retrieve exit code when catching SystemExit
     - scons-time now uses context managers around file opens
     - Fix regex patterns that were not specified as raw strings
-    - Use importlib to dynamically load tool and platform modules instead of imp module.
-    - Define regex patterns as raw strings to avoid Python 3.8 warnings about unknown escapes.
 
   From Bernhard M. Wiedemann:
     - Do not store build host+user name if reproducible builds are wanted
