--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,14 +7,24 @@
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From William Deegan:
+    - Fix spurious rebuilds on second build for cases where builder has > 1 target and the source file
+      is generated. This was causing the > 1th target to not have it's implicit list cleared when the source
+      file was actually built, leaving an implicit list similar to follows for 2nd and higher target
+              ['/usr/bin/python', 'xxx', 'yyy', 'zzz']
+      This was getting persisted to SConsign and on rebuild it would be corrected to be similar to this
+              ['zzz', 'yyy', 'xxx', '/usr/bin/python']
+      Which would trigger a rebuild because the order changed.
+      The fix involved added logic to mark all shared targets as peers and then ensure they're implicit
+      list is all cleared together.
+
+
+
   From Mats Wichmann:
     - scons-time takes more care closing files and uses safer mkdtemp to avoid
       possible races on multi-job runs.
     - Use importlib to dynamically load tool and platform modules instead of imp module
 
-  From John Doe:
-
-    - Whatever John Doe did.
 
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
