Some more lint-derived cleanups
Consistently use "not is" and "not in", many instances used
the form "not x is y" instead, which pylint objected to.
A couple of bare except clauses got a qualifier.
Files otherwise touched had trailing whitespace cleaned up as well.

These are all things that sider would complain about if a change
happened nearby, so this is pre-emptive.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -30,7 +30,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       always present on modern Pythons; no longer need the code for
       2.5-and-earlier optparse). cmp is not a builtin function in Py3,
       drop one (unused) use; replace one.  Fix another instance of
-      renaming to SConsEnvironmentError.
+      renaming to SConsEnvironmentError. Trailing whitespace.
+      Consistently use not is/in (if not x is y -> if x is not y).
 
 
 
