--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -64,6 +64,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fix coding error in docbook tool only exercised when using python lxml 
     - Recognize two additional GNU compiler header directory options in
       ParseFlags: -iquote and -idirafter.
+    - Fix more re patterns that contain \ but not specified as raw strings
 
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
