[PR #3369] more info into changelog
Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -65,6 +65,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Recognize two additional GNU compiler header directory options in
       ParseFlags: -iquote and -idirafter.
     - Fix more re patterns that contain \ but not specified as raw strings
+      (affects scanners for D, LaTeX, swig)
 
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
