--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -77,6 +77,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mathew Robinson:
     - Update cache debug output to include cache hit rate.
     - No longer unintentionally hide exceptions in Action.py
+    - Environment's get method now behaves like Python's dictionary get method
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
 
