--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -42,9 +42,15 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       which specifies what character to join all the argements output into the tempfile. The default remains a space
       when mslink, msvc, or mslib tools are loaded they change the TEMPFILEARGJOIN to be a line separator (\r\n on win32)
 
-    From Michael Hartmann:
+  From Michael Hartmann:
     - Fix handling of Visual Studio Compilers to properly reject any unknown HOST_PLATFORM or TARGET_PLATFORM
 
+  From Mathew Robinson:
+    - Update cache debug output to include cache hit rate.
+    - No longer unintentionally hide exceptions in Action.py
+
+  From Lukas Schrangl:
+    - Enable LaTeX scanner to find more than one include per line
 
   From Mats Wichmann:
     - scons-time takes more care closing files and uses safer mkdtemp to avoid
@@ -72,11 +78,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       ParseFlags: -iquote and -idirafter.
     - Fix more re patterns that contain \ but not specified as raw strings
       (affects scanners for D, LaTeX, swig)
-      
 
-  From Mathew Robinson:
-    - Update cache debug output to include cache hit rate.
-    - No longer unintentionally hide exceptions in Action.py
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
 
