add -fmerge-all-constants flag to LINKFLAGS
-fmerge-all-constants doesn't fully work if it isn't also included
as part of the link step. This change will add -fmerge-all-constants
to both CCFLAGS and LINKFLAGS if it is specified as a build flag.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -10,6 +10,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
     - Whatever John Doe did.
 
+  From Ben Reed:
+    - Added -fmerge-all-constants to flags that get included in both CCFLAGS and LINKFLAGS.
+
 
 RELEASE 3.1.0 - Mon, 20 Jul 2019 16:59:23 -0700
 
