--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -4,6 +4,13 @@
 
                             Change Log
 
+RELEASE  VERSION/DATE TO BE FILLED IN LATER
+
+  From John Doe:
+
+    - Whatever John Doe did.
+
+
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
 
   From William Deegan:
