Stop converting to list where not needed
Python 3 returns a special object, which is iterable, rather than
a list when you ask for dictionary keys(), values(), items(). if
you then proceed to iterate over it it's being used as expected and
doesn't have to be forced to a list first.  This occurs a number of
places in this form:

  for k in list(something.keys()):

Also there are several places where the code loops over the result
of dict.keys() and then uses the key to index into the dictionary,
this can be replaced by:

  for k, v in something.items():

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -35,6 +35,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - a bunch of linter/checker syntax fixups
     - Convert remaining uses of insecure/deprecated mktemp method.
     - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.
+    - Reduce needless list conversions.
 
   From Jeremy Elson:
     - Updated design doc to use the correct syntax for Depends()
