--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -45,6 +45,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Added new module SCons.Scanner.Python to allow scanning .py files.
     - Added support for explicitly passing a name when creating Value() nodes. This may be useful
       when the value can't be converted to a string or if having a name is otherwise desirable.
+    - Fixed usage of abspath and path for RootDir objects on Windows. Previously
+      env.fs.Dir("T:").abspath would return "T:\T:" and now it correctly returns "T:".
 
   From Iosif Kurazs:
     - Added a new flag called "linedraw" for the command line argument  "--tree"
